chore: fixed deprecated API usage